# fastapi_mongodb_server

./: LICENSE  README.md  api.py  pyproject.toml
app/: main.py  settings.py
app/core/db/: mongodb.py  mongodb_utils.py
app/core/models/: task_model.py  user_model.py
app/routers/: tasks.py  users.py
app/tests/: test_app.py
fastapi_mongo_server/: main.py  settings.py
fastapi_mongo_server/core/db/: mongodb.py  mongodb_utils.py
fastapi_mongo_server/core/models/: objectid_model.py  task_model.py  user_model.py
fastapi_mongo_server/routers/: tasks.py  users.py
fastapi_mongo_server/tests/: test_app.py
