[tool.poetry]
name = "fastapi_mongo_server"
version = "0.1.0"
description = ""
authors = ["Alex Moore <almoore1@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
autopep8 = "^1.5.7"
motor = "^2.5.0"
pydantic = {extras = ["email"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
