[tool.poetry]
name = "fastapi_mongo_server"
version = "0.1.0"
description = ""
authors = ["Alex Moore <almoore1@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "0.103.2"
uvicorn = "0.23.2"
autopep8 = "2.0.4"
motor = "3.3.1"
pydantic = {extras = ["email"], version = "^2.4.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
